force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/cgcloud__Product_Levels_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Product Levels Mapping</label>
    <pluralLabel>Product Levels Mapping</pluralLabel>
</CustomObject>