force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/fields/cgcloud__Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>