force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/fields/cgcloud__Product_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Level_Name__c</fullName>
    <label>Product Level Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>