force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/fields/cgcloud__Product_SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_SObject_Field__c</fullName>
    <label>Product SObject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>