force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/validationRules/cgcloud__Hierarchy_Level_must_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hierarchy_Level_must_not_be_empty</fullName>
    <active>true</active>
    <description>The Hierarchy Level cannot be empty.</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISNULL( cgcloud__Hierarchy_Level__c )
      )</errorConditionFormula>
    <errorMessage>Enter a hierarchy level.</errorMessage>
</ValidationRule>