force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/validationRules/cgcloud__Product_Level_Name_must_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_Level_Name_must_not_be_empty</fullName>
    <active>true</active>
    <description>The Product Level Name cannot be empty.</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISBLANK( cgcloud__Product_Level_Name__c )
      )</errorConditionFormula>
    <errorMessage>Enter a product level.</errorMessage>
</ValidationRule>