force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/validationRules/cgcloud__Sales_Org_must_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_must_not_be_empty</fullName>
    <active>true</active>
    <description>The Sales Organization cannot be empty.</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISBLANK( cgcloud__Sales_Org__c )
      )</errorConditionFormula>
    <errorMessage>Select a sales org.</errorMessage>
</ValidationRule>