force-app/main/default/objects/cgcloud__Product_Levels_Mapping__mdt/listViews/cgcloud__All_1.listView-meta.xml
<ListView>
    <fullName>cgcloud__All_1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>cgcloud__Hierarchy_Level__c</columns>
    <columns>cgcloud__Product_Level_Name__c</columns>
    <columns>cgcloud__Product_SObject_Field__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>